--- a/main.html
+++ b/main.html
@@ -4,12 +4,29 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<nav>
+		<ul>
+			<li><a href="https://acciojob.com/events.html"> Home </a> </li>
+			<li><a href="https://www.google.com/"> About us </a> </li>
+			<li><a href="https://twitter.com/">Contact us</a></li>
+		</ul>
+	</nav>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>3 random audios</h1>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+	</audio>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+	</audio>
+	<audio controls>
+		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+	</audio>
 
 </body>
 
